@@ -196,7 +196,7 @@ if test "x$GADGET_USE_X11" = "xyes" ; then
 fi
 
 if test "x$BUILD_JAVA" = "xY" ; then
-   TWEEK_PATH_JAVA([0.17.1],
+   TWEEK_PATH_JAVA([0.18],
                    [JCCL_PATH_JAVA([0.18], ,
                        [AC_MSG_WARN([*** JCCL Java API required for VRJConfig ***])
                        BUILD_JAVA='N'])],
